style.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@100&family=Raleway:wght@200&family=Roboto:wght@100&family=Signika+Negative&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Raleway:wght@200&family=Roboto:wght@100&family=Signika+Negative&display=swap');
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    user-select: none;
}
:root{
    --primary-color:#171f4d;
    --secondary-color: #2d3481;
}

::-webkit-scrollbar{
    display: none;
}

html {
    font-size: 62.5%;
    font-family: "poppins", sans-serif;
}
body {
    overflow-x: hidden;
    background-color: var(--primary-color);
    font-family: 'poppins', sans-serif;
}
.center-item {
    display: flex;
    justify-content: center;
    align-items: center;
}
li {
    list-style: none;
}
a {
    text-decoration: none;
}
.center-items{
    display: flex;
    justify-content: center;
    align-items: center;
}
.header{
    z-index: 10;
    position: relative;
    background-color: #0709211c;
}

.navbar {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    padding: 1rem 1.5rem;
    background-color: var(--secondary-color)
    height: 11vh;
}
.hamburger {
    display: none;
}
.bar {
    display: block;
    width: 25px;
    height: 3px;
    margin: 5px auto;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-color: #b5b5b5;
}
.nav-menu {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    width: 100%;
}
  
.nav-item {
    margin-left: 3rem;
}
  
.nav-link {
    font-size: 1.6rem;
    font-weight: 400;
    color: #ffffff;
}
  
.nav-link:hover {
    color: #ffff;
}
  
.nav-logo {
    height: 2rem;
    width: 10rem;
    object-fit: cover;
    object-position: center;
}
.side-show {
    font-weight: bolder;
}

.search-logo{
    margin-left: auto;
    margin-right: -1rem;
    display: flex;
}
.search{
    background-color: transparent;
    border: 2px solid #fcfcfcea;
    padding: 0.5rem 1rem;
    border-radius: 50px;
    font-size: 1rem;
    color: #ffffff;
    font-family: inherit;
    margin-right: 1rem;
}
.search:focus{
    outline: 0;
    background-color: rgb(192, 192, 192);
}
.search::placeholder{
    color: #ffffffa4 ;
}

.fa-user-circle{
    color: rgb(255, 255, 255);
    font-size: 23px;
    margin-right: 3rem;
}
.img-home{
    width: 100%;
    height: 70vh;
    object-fit: cover;
    object-position: center;

}
.hero-image{
    background-image: linear-gradient(#00000026, #0000001f),url("img/judeus-samson-tI6m-AXpAsg-unsplash.jpg");
    background-size: cover;
    background-position: center;
    height: 66vh;
    position: relative;
    top: -11vh;    
    -webkit-transition: 0.2s;
    border-bottom: 4px solid #171f4d40;
}
.hero-infos{
    display: flex;
    justify-content: flex-start;
    margin-left: 10rem;
    align-items: center;
    height: 58vh;
    font-family: "raleway";
}
.hero-infos h1{
    font-family: "bebas neue";
    font-size: 30px;
    color: #ffffff;
    font-weight: bolder;
    letter-spacing: 3px;
}
.hero-infos a{
    color: white;
    font-weight: bolder;
    border-radius: 4px;
    padding: 5px 20px;
    font-size: 20px;
}
.buttons-hompage{
    display: flex;
    gap: 26px;
    margin-top: 2rem;
}

.button-black{
    background-color: black;
}
.button-blue{
    background-color: #02d4fe;
}

.button-black:hover{
    background-color: #02d4fe;
}
.button-blue:hover{
    background-color: black;
}
.button-red{
    background-color: red;
}
.button-red:hover{
    background-color: #02d4fe;
}

/*Movie api*/
#main-movie{
   display: flex;
    flex-direction: row;
   overflow-x: scroll;
   scroll-behavior: smooth;
}
#drama-movie{
    display: flex;
     flex-direction: row;
    overflow-x: scroll;
    scroll-behavior: smooth;
}
#best2010-movie{
    display: flex;
    flex-direction: row;
    overflow-x: scroll;
    scroll-behavior: smooth
}
#search-container{
    display: flex;
    flex-direction: row;
    overflow-x: scroll;
    scroll-behavior: smooth
}


.movie-genre{
    color: rgb(0 213 255);
    font-size: 1.3rem;
    margin-left: 1rem;
}

.movie-card{
    width: 17vw; 
    margin: 1rem;
    border-radius: 3px;
}

.movie-image {
    width: 15vw;
    height: 100%;
}

.popular-flez{
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.popular-genre{
    color: white;
    font-size: 4rem;
    margin-left: 7rem;
}



.review-green{
    color: rgb(16, 245, 16);
    margin-right: 1rem;
}
.review-orange{
    color: rgb(240, 156, 0);
    margin-right: 1rem;
}
.review-red{
    color: rgb(255, 53, 2);
    margin-right: 1rem;
}

.movie-information {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
    background-color: #00000030;
    width: 100vw;
    color: #fff;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.movie-information-card{
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin: 1vw 4vw;
}

.movie-backdrop{
    height: 54vh;
    object-fit: cover;
    object-position: center;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    border-bottom: 2px solid #ff0000d1;
}

.movie-overview-info{
    background-color: #000000d4;
    display: flex;
    flex-direction: column;
    height: 40vh;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
}

.tittle-and-button{
    position: fixed;
    margin-left: 5vw;
    margin-bottom: 30vh;
}

.tittle{
    font-size: 61px;
    margin-bottom: 7vh;
    font-family: "Raleway";
}

.button-play{
    padding: 6px 68px;
    font-size: 18px;
    background-color: #f00606;
    border-radius: 11px;
}

.button-play:hover{
    background-color: rgb(46, 46, 46);
}

.fa-play-circle{
    margin-right: 2px;
}

.relase-date{
    color: lightgrey;
    margin-top: 1vh;
    font-size: 16px;
    margin-left: 2vw;
}

.overview{
    margin-left: 2vw;
    font-size: 20px;
    margin-top: 1vh;
    overflow-y: scroll;
}
.age-limit{
    color: rgb(252, 252, 252);
    margin-left: 2vw;
    border: 1px solid;
    padding: 0.5px 3px;
}

.close-info-p{
    display: flex;
    justify-content: flex-end;
    font-size: 33px;
    margin-top: 10px;
    margin-bottom: -59px;
    margin-right: 20px;
}

.close-info{
    z-index: 10;
}

.login-background{
    background-color: var(--primary-color);
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    margin-top: 20vh;
}

.login-img-name img{
    width: 16vw;
    height: 23vh;
    object-fit: cover;
    object-position: center;
    margin: 0px 11px;
    border-radius: 7px;
    
}

.login-img-name{
    display: flex;
    flex-direction: column;
}

.login-img-name p{
    display: flex;
    justify-content: center;
    color: rgba(255, 255, 255, 0.842);
    font-size: 14px;
    margin-top: 1vh;
}

.login-h1{
    font-size: 30px;
    color: #02d4fe;
    margin-bottom: -121px;
    display: flex;
    justify-content: center;
    margin-top: 27vh;
}

#search-h2{
    display: none;
}

#footer{
    height: 27vh;
}

.wrapper-footer-info{
    display: flex;
    color: #037eb1;
    flex-direction: row;
}

.wrapper-footer-info h3{
    color: #10b2fa;
    font-size: 25px;
    margin-top: 5vh;
}

.list-footer{
    margin-left: 5vw;
    font-size: 12px;
}

.list-footer p{
    width: 30vw;
}

.list-footer ul li{
    cursor: pointer;
}

.social-footer{
    font-size: 33px;
    margin-top: 10vh;
    color: #037eb1;
    background-color: #1418436e;
    padding: 1px 20px;
    margin-left: 5vw;
    border-radius: 9px;
}

.social-footer p{
    font-size: 14px;
}

.social-footer i{
    cursor: pointer;
}

.contact-wrapper{
    display: flex;
    justify-content: center;
    height: 60vh;
}

.contact-form{
    display: flex;
    flex-direction: column;
    background-color: var(--secondary-color);
    padding: 2rem 5rem;
}

.contact-form label{
    color: #11b1fa;
    font-size: 14px;
    margin-top: 1vh;
}

.contact-form input{
    padding: 4px 13px;
    border: 2px solid var(--primary-color);
    border-radius: 2px;
}







@media only screen and (max-width: 1190px){
    .wrapper-footer-info{
        width: 95vw;
    }
}


@media only screen and (max-width: 768px) {
    .nav-menu {
      position: fixed;
      left: -100%;
      top: 4.7rem;
      flex-direction: column;
      background-color: var(--secondary-color);
      width: 100%;
      transition: 0.3s;
      z-index: 8;
      position: absolute;
      border-top: 1px solid rgb(0, 0, 0);
    }

    .nav-menu.active {
      left: 0;
    }
  
    .nav-item {
      margin: 2.5rem 0;
    }
  
    .hamburger {
      display: block;
      cursor: pointer;
      margin-left: auto;
      background-color: var(--primary-color);
    }

    .hamburger.active .bar:nth-child(2) {
      opacity: 0;
    }
  
    .hamburger.active .bar:nth-child(1) {
      transform: translateY(8px) rotate(45deg);
    }
  
    .hamburger.active .bar:nth-child(3) {
      transform: translateY(-8px) rotate(-45deg);
    }

    .hero-infos{
        height: 46vh;
        margin-left: 4rem;
    }

    .hero-image{
        height: 39vh;
    }

    .hero-infos h1{
        font-size: 30px;
    }

    .search{
        border: 2px solid var(--primary-color);
    }

    .nav-logo{
        height: 4rem;
        width: 17rem;
    }

    .login-background img{
        height: 8vh;
    }

    .movie-image{
        width: 16vw;
    }

    .tittle{
        font-size: 43px;
    }

    .wrapper-footer-info{
        flex-direction: column;
    }

    .social-footer{
        margin-top: 4vh;
        margin-bottom: 4vh;
        width: 42vw;
    }

    #footer{
        margin-left: 8vw;
    }

    .tittle-and-button{
        margin-bottom: 41vh;
    }
    
}

